
plugins {
    id 'java'
    id 'application'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}

test {
    jvmArgs '--enable-preview'
}

application {
    applicationDefaultJvmArgs = ['--enable-preview']
    mainClass = 'dev.softwaregarden.jep443.JEP443Demo'
}

jar {
    manifest {
        from 'src/main/resources/META-INF/MANIFEST.MF'
    }
}